	* Add warnings if there is no "real" User-Name to identify users.
	* Add sample configuration to update Stripped-User-Name and/or
	  Class for user sessions. See sites-available/default
	* Add configuration to suppress printing values for User-Name, etc.
	  See radiusd.conf, "suppress_secrets"
	* Make the TLS debug output significantly more understandable.

	Bug fixes
	* Fix long-term double free due to PCRE calling our "free"
	  function twice.  Fixes #1967, #3188, #3868.
	* Respect the "log_reject" configuration item in more places.
	  Fixes #3352.  This lowers the number of "Login incorrect"
	  messages when "log_reject = no".
	* Fix rpmbuild for Centos > 6.  Patch from Matthew Newton.
	* Run Post-Proxy-Type Fail... when all home servers are down.
	* Note that rlm_replicate can only use UDP, and not TCP or TLS.
	* DHCP pool lookup is now keyed by Client Identifier (Option 61) when
	  supplied by client, otherwise the hardware address is used. Compliant
	  with RFC 2132. This change will not affect existing systems on upgrade,
	  but new installations will use the new behavior.
	  Patch from Terry Burton.
	* Fix minor spelling mistakes in man pages.  Patch from
	  Alexander Scheel.
	* Don't print invalid tags in rlm_cache, among other places.
	  Fixes #3491
	* Do home_server failover immediately when an initial TCP / Radsec
	  connection fails.
	* Port EAP-PWD constant time fixes from "master" branch.  The issue
	  was verified by Mohamed Sabt, and a patch supplied by
	  Daniel De Almeida Braga.
	* Clear error on SQLITE_BUSY to prevent memory leak in corner cases.
	  Patch from Nick Porter.
	* Properly add SQL clients to virtual servers.
	* Update documentation for cert generation.  Patch from Alexander Scheel.
	* Use better API when decoding DHCP packets, to avoid unnecessary work.
	  This improves performance noticably.
	* Parse locale-dependent dates.  Fixes #3602.
	* Strip out "-frecord-gcc-switches" from rlm_python3 configure build. Fixes #3693