@@ -38,7 +38,8 @@ CREATE TABLE IF NOT EXISTS radacct (
 	framedipv6address varchar(45) NOT NULL default '',
 	framedipv6prefix varchar(45) NOT NULL default '',
 	framedinterfaceid varchar(44) NOT NULL default '',
-	delegatedipv6prefix varchar(45) NOT NULL default ''
+	delegatedipv6prefix varchar(45) NOT NULL default '',
+	class varchar(64) default NULL
 );
 
 CREATE UNIQUE INDEX acctuniqueid ON radacct(acctuniqueid);
