@@ -67,6 +67,7 @@ FreeRADIUS 3.0.22 Tue 24 Mar 2020 12:00:00 EDT urgency=low
 	* Add configuration to suppress printing values for User-Name, etc.
 	  See radiusd.conf, "suppress_secrets"
 	* Make the TLS debug output significantly more understandable.
+	* Updated all SQL schema adding a new 'Class' column.
 
 	Bug fixes
 	* Fix long-term double free due to PCRE calling our "free"
